--- a/styles.css
+++ b/styles.css
@@ -6,9 +6,11 @@
     margin: 0;
     padding: 0;
     height: 100vh;
+    font-size: 130%;
 }
 .centerText {text-align: center;}
 .center {margin: auto;}
+.leftText {text-align: left;}
 
 
 /*color*/
